--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "from": "^0.1.7",
+    "history": "^4.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
-    "redux-observable": "^1.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-observable": "1.1.0",
     "redux-thunk": "^2.3.0",
-    "rxjs": "^6.6.7",
+    "reselect": "4.0.0",
+    "rxjs": "6.5.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
