--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 services:
     frontend:
-        container_name: frontend
+        container_name: qiibee
         build: ./
         volumes:
             - './:/app'
